Drawing with Onion Skin enabled crash Blender #57975

Closed
opened 2018-11-21 13:34:46 +01:00 by William Reynish · 3 comments

System Information
macOS 10.14.1 (18B75) and AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: Blender 2.80 3a64d7ca48

Blender freezes when adding new GP frame,

Exact steps for others to reproduce the error
Open the blend file below. Start drawing, which adds a new GP frame. Blender then freezes.

episode_2_GP_freeze_bug_.blend

**System Information** macOS 10.14.1 (18B75) and AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: Blender 2.80 3a64d7ca48c Blender freezes when adding new GP frame, **Exact steps for others to reproduce the error** Open the blend file below. Start drawing, which adds a new GP frame. Blender then freezes. [episode_2_GP_freeze_bug_.blend](https://archive.blender.org/developer/F5665365/episode_2_GP_freeze_bug_.blend)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Antonio Vazquez was assigned by William Reynish 2018-11-21 13:36:00 +01:00
Antonio Vazquez changed title from Drawing new Grease Pencil frame freezes Blender to Drawing with Onion Skin enabled crash Blender 2018-11-21 15:51:50 +01:00

This issue was referenced by 693233b198

This issue was referenced by 693233b1984819a6799ef605e5b3cd3638be25d2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57975
No description provided.