Fix T57975: Drawing with Onion Skin enabled crash Blender